Refactor navigation architecture